--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,8 @@ h5, .h5 {
   right: 0;
   z-index: 3;
   padding-top: 0;
-  padding-bottom: 0; }
+  padding-bottom: 0;
+ }
   @media screen and (max-width: 991px) {
     .probootstrap-navbar-dark {
       top: 0;
